--- a/css/home.css
+++ b/css/home.css
@@ -9,20 +9,20 @@
 .home {
     display: flex;
     flex-direction: column;
-    width: 40%;
-    //flex-grow: 2;
+    width: 40vw;
+    /*flex-grow: 1;*/
     justify-content: space-around;
     margin-left: 30px;
 }
 
-.home h1 {
+.title h1 {
     font-weight: lighter;
     font-size: 4rem;
     color: #FFFFFF;
 
 }
 
-.home h1 span {
+.title h1 span {
     font-weight: bold;
     font-size: 4rem;
     color: #FCDE32;
@@ -67,20 +67,21 @@
     height: 60px;
 }
 
-.descer img:
-
 .illustration {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    //flex-grow: 1;
-    width: 60%;
+    width: 60vw;
+    /*flex-grow: 3;*/
+    //background-color: purple;
 
 }
 
 
 .illustration img {
+    width: 100%;
     height: 100%;
+    
 
 }
 
@@ -88,6 +89,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
 
 }
 
@@ -98,6 +100,158 @@
 
 }
 
+.how {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.how h2 {
+    font-weight: lighter;
+    font-size: 3rem;
+    color: #FFFFFF;
+    text-align: center;
+    margin-top: 60px;
+}
+
+.how h2 span {
+    font-weight: bold;
+    font-size: 3rem;
+    color: #FCDE32;
+}
+
+.circle-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    //background-color: purple;
+    margin-top: 60px;
+
+}
+
+.circle-list .container-circle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.circle-list .container-circle .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #c4c4c4;
+
+}
+
+.circle-list .container-circle p {
+    margin: 30px 10px 10px 10px;
+    font-weight: bold;
+    font-size: 1rem;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.circle-list .container-circle p a { 
+    font-weight: bold;
+    font-size: 1rem;
+    color: #FCDE32;
+    
+}
+
+.card-curso {
+    display: flex;
+    flex-direction: column;
+        margin: 30px;
+
+
+}
+
+.card-curso img {
+    width: 250px;
+    height: 150px;
+}
+
+.card-curso .card-body h2 {
+    margin: 10px;
+    font-size: 1.5rem;
+}
+
+.card-curso .card-body p {
+    margin: 10px;
+}
+
+.card-curso .card-body {
+    width: 250px;
+    background-color: #FFFFFF;
+    border-bottom: 1px solid #C4C4C4;
+}
+
+.card-curso .tags {
+    display: flex;
+    flex-wrap: wrap;
+    width: 250px;
+    height: auto;
+    background-color: #FFFFFF;
+
+}
+
+.card-curso .tags p {
+    margin: 10px;
+    padding: 5px;
+    border-radius: 25%;
+    background-color: #FCDE32;
+    font-weight: bold;
+
+}
+
+.card-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 80%;
+    height: auto;
+    //background-color: purple;
+
+}
+
+.preview h2 {
+    font-weight: lighter;
+    font-size: 3rem;
+    color: #FFFFFF;
+    text-align: center;
+    margin-top: 60px;
+}
+
+.preview h2 span {
+    font-weight: bold;
+    font-size: 3rem;
+    color: #FCDE32;
+}
+
+.circle-list .right-arrow {
+    display: flex;
+    align-items: center;
+}
+
+.btn-link {
+
+}
+.preview .btn-link {
+    background-color: #FCDE32;
+    border-radius: 5px;
+    padding: 20px 10px 20px 10px;
+    width: 200px;
+    margin-bottom: 30px;
+    font-size: 1rem;
+    font-weight: bold;
+}
 @media (max-width: 768px){
     .illustration {
         display: none;
@@ -109,9 +263,31 @@
 
     }
 
+    .home {
+        width: 100vw;
+        align-items: center;
+    }
+
+    .how, .preview {
+        height: auto;
+    }
 
 
 
+    .circle-list .right-arrow {
+        display: none;
+       
+    }
 
+    .circle-list {
+        display: flex;
+        flex-direction: column;
+     
+    }
 
+    .card-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
