Página home sendo servida em '/' com csse imagens.

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EdUp</title>
-    <link rel="icon" href="img/logo_up.svg"/> 
+    <link rel="icon" href="/img/logo_up.svg"/> 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css"/>
-    <link rel="stylesheet" href="css/home.css"/>
-    <link rel="stylesheet" href="css/menu_template.css"/>
+    <link rel="stylesheet" type="text/css" href=" /css/reset.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/home.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/menu_template.css"/>
 </head>
 <body class="container bg-space">
     <header> 
         <figure class="logo">
-            <img src="img/logo_edup.svg" alt="Logo Edup"/>
+            <img src="/img/logo_edup.svg" alt="Logo Edup"/>
         </figure>
         <form class="search">
             <input type="search" placeholder="Buscar" name="pesquisar"/>
             <button></button>
         </form>
         <nav class="menu">
-            <a href="/index.html">Home</a>
+            <a href="/">Home</a>
             <a href="/pagina_cursos.html">Cursos</a>
             <a href="/sobrenos.html">Sobre</a>
         </nav>
