Adiciona rotas para página sobre nós e painel de empresa. Painel de Empresa é acessado somente por autenticação. Cria template crudEmpresa.njk para renderizar o painel da empresa.

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -22,7 +22,7 @@
         <nav class="menu">
             <a href="/">Home</a>
             <a href="/pagina_cursos.html">Cursos</a>
-            <a href="/sobrenos.html">Sobre</a>
+            <a href="/sobrenos">Sobre</a>
         </nav>
         <section class="acesso">
             <a class="sigin">Login</a>
