--- a/server/views/crudEmpresa.njk
+++ b/server/views/crudEmpresa.njk
@@ -27,7 +27,7 @@
             <ul class="menu-lateral">
                 <li><a class="marked" href="#">Painel</a></li>
                 <li><a class="menu-lateral-item" href="#">Perfil</a></li>
-                <li><a class="menu-lateral-item" href="#">Cursos</a></li>
+                <li><a class="menu-lateral-item" href="/cadastroCurso">Cursos</a></li>
                 <li><a class="menu-lateral-item" href="#">Configurações</a></li>
             </ul>
 
