Cria rotas para cadastro de empresas e alunos

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -35,8 +35,8 @@
             <h1>Inicie sua jornada <span>conosco.</span></h1>
             </div>
             <div class="button-group">
-                <a href="/formAluno"><button class="button-aluno">Aluno</button></a>
-                <a href="/formEmpresa"><button class="button-empresa">Empresa</button></a>
+                <a href="/cadastroAluno"><button class="button-aluno">Aluno</button></a>
+                <a href="/cadastroEmpresa"><button class="button-empresa">Empresa</button></a>
             </div>
             <figure class="descer"><a href="#how"><img src="./img/down.svg" alt="Ir para baixo"/></a>   </figure>
         </section>
@@ -52,7 +52,7 @@
                 <div class="circle">
                     <img src="/img/step1.svg" alt="Icon"/>
                 </div>
-                <p>1.<a href="/formAluno.html">Cadastre-se</a></p>    
+                <p>1.<a href="/cadastroAluno.html">Cadastre-se</a></p>    
             </div>
             <figure class="right-arrow">
                 <img src="/img/arrow_right.svg" alt="Próximo"/>
