--- a/server/views/crudEmpresa.njk
+++ b/server/views/crudEmpresa.njk
@@ -18,7 +18,7 @@
                 <img src="img/user.svg" alt="Foto do Usuário"/>
             </figure>
             <section class="info"> 
-                <p class="nome-aluno">{{user.name}}</p>
+                <p class="nome-aluno">{{user.company.nome}}</p>
                 <p class="descricao-aluno">Descriçao</p>
                 <div class="identificador">
                     <p>Empresa</p>
