--- a/server/views/crudEmpresa.njk
+++ b/server/views/crudEmpresa.njk
@@ -32,7 +32,7 @@
             </ul>
 
             <ul class="menu-lateral-end">
-                <li><a href="#"><img src="/img/exit.svg" alt="Sair"/> Sair</a></li>
+                <li><a href="/logout"><img src="/img/exit.svg" alt="Sair"/> Sair</a></li>
             </ul>
             
         </section>
