Cria rota POST para form de cadastro de curso. Link para a home em index.js

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -20,7 +20,7 @@
             <button></button>
         </form>
         <nav class="menu">
-            <a href="/index">Home</a>
+            <a href="/">Home</a>
             <a href="/cursos">Cursos</a>
             <a href="/sobrenos">Sobre</a>
         </nav>
