--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,10 @@
     <link rel="icon" href="img/logo_up.svg"/> 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/home.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/menu_template.css"/>
+    <link rel="stylesheet" href="/css/home.css"/>
+    <link rel="stylesheet" href="./css/rodape.css"/>
 </head>
 <body class="container bg-space">
     <header> 
@@ -20,9 +22,16 @@
             <button></button>
         </form>
         <nav class="menu">
-            <a href="/">Home</a>
-            <a href="/cursos">Cursos</a>
-            <a href="/sobrenos">Sobre</a>
+                <a href="javascript:void(0);" class="hamburguer" id="jsNavbarToggle" onclick="mostrarMenu()">
+                        <i class="fa fa-bars fa-2x"></i>
+                      </a>
+                      <a class="active">Menu</a>
+            <ul class="menu-list" id="jsmenu">
+            
+            <li><a href="/">Home</a></li>
+            <li><a href="/cursos">Cursos</a></li>
+            <li><a href="/sobrenos">Sobre</a></li>
+        </ul>
         </nav>
         <section class="acesso">
             <a href="/login" class="sigin">Login</a>
@@ -35,8 +44,8 @@
             <h1>Inicie sua jornada <span>conosco.</span></h1>
             </div>
             <div class="button-group">
-                <a href="/cadastroAluno"><button class="button-aluno">Aluno</button></a>
-                <a href="/cadastroEmpresa"><button class="button-empresa">Empresa</button></a>
+                <a class="button-aluno" href="/cadastroAluno">Aluno</a>
+                <a class="button-empresa" href="/cadastroEmpresa">Empresa</a>
             </div>
             <figure class="descer"><a href="#how"><img src="./img/down.svg" alt="Ir para baixo"/></a>   </figure>
         </section>
@@ -46,13 +55,13 @@
    </section> 
    <section class="how" id="how">
         <h2>Conectamos você as melhores</br><span> oportunidades.</span></h2>
-        <h2>Como ?</h2>
+        <h2>Como?</h2>
         <div class="circle-list">
             <div class="container-circle">
                 <div class="circle">
                     <img src="/img/step1.svg" alt="Icon"/>
                 </div>
-                <p>1.<a href="/cadastroAluno.html">Cadastre-se</a></p>    
+                <p>1.<a href="/cadastroAluno">Cadastre-se</a></p>    
             </div>
             <figure class="right-arrow">
                 <img src="/img/arrow_right.svg" alt="Próximo"/>
@@ -61,7 +70,7 @@
                 <div class="circle">
                     <img src="/img/step2.svg" alt="Icon"/>
                 </div>
-                <p>2.<a href="/cursos.html">Escolha</a> um curso</p>    
+                <p>2.<a href="/cursos">Escolha</a> um curso</p>    
             </div>
             <figure class="right-arrow">
                 <img src="/img/arrow_right.svg" alt="Próximo"/>
@@ -110,8 +119,22 @@
             </div>
             
         </div>
-        <a href="/cursos.html"><button class="btn-link">Ver mais</button></a>
+        <a href="/cursos"><button class="btn-link">Ver mais</button></a>
    </section>
-   <!-------------Footer------------>
+   
+   <footer class="rodape bg-space">
+    <figure class="logo">
+        <img src="./img/edup.svg" alt="Logo"/>
+    </figure>
+    <div class="copyright">
+        <p><span>©</span> EdUp 2020 Todos os direitos reservados.</p>
+    </div>
+    <figure class="social-icons">   
+        <img src="./img/face.svg" alt="Social">
+        <img src="./img/twitter.svg" alt="Social">
+        <img src="./img/in.svg" alt="Social">
+    </figure>
+</footer>
+   <script src="js/menu.js"></script>
 </body>
 </html>
