Linka form de cadastro de empresa na pagina de login

--- a/views/login.html
+++ b/views/login.html
@@ -29,7 +29,7 @@
         <input type="submit" value="Login"/>    
         <div class="register">
             <p>Ainda não faz parte ?</p>
-            <a href="#">Registre-se</a>
+            <a href="/cadastroEmpresa">Registre-se</a>
         </div>
     </form>
     
