--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,6 +13,7 @@
     /*flex-grow: 1;*/
     justify-content: space-around;
     margin-left: 30px;
+
 }
 
 .title h1 {
@@ -42,6 +43,8 @@
     padding: 20px 10px 20px 10px;
     width: 200px;
     margin-right: 30px;
+    display: flex;
+    justify-content: center;
 }
 
 .button-empresa {
@@ -50,6 +53,21 @@
     border-radius: 5px;
     padding: 20px 10px 20px 10px;
     width: 200px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.button-empresa  span{
+    font-weight: bold;
+    color: #202F36;
+}
+
+
+.button-aluno  span{
+    font-weight: bold;
+    color: #202F36;
+    
 
 }
 
@@ -80,7 +98,7 @@
 
 .illustration img {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     
 
 }
@@ -89,7 +107,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 
 }
 
@@ -104,7 +122,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .how h2 {
@@ -251,6 +269,7 @@
     margin-bottom: 30px;
     font-size: 1rem;
     font-weight: bold;
+
 }
 @media (max-width: 768px){
     .illustration {
@@ -289,5 +308,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .button-group {
+        width: 100%;
+        justify-content: flex-start;
+
     }
 }
