Conserta links da home

--- a/views/index.html
+++ b/views/index.html
@@ -24,13 +24,13 @@
         <nav class="menu">
             
             
-            <a href="#">Home</a>
-            <a href="#">Cursos</a>
-            <a href="#">Sobre</a>
+            <a href="/">Home</a>
+            <a href="/cursos">Cursos</a>
+            <a href="/sobrenos">Sobre</a>
         </nav>
 
         <section class="acesso">
-            <a href="/login.html" class="signin">Login</a>
+            <a href="/login" class="signin">Login</a>
             <button class="signup">Cadastre-se</button>
         </section>
     </header>
@@ -40,8 +40,8 @@
             <h1>Inicie sua jornada <span>conosco.</span></h1>
             </div>
             <div class="button-group">
-                <a class="button-aluno" href="/formAluno.html"><span>Aluno</span></a>
-                <a class="button-empresa" href="/formEmpresa.html"><span>Empresa</span></a>
+                <a class="button-aluno" href="/cadastroAluno"><span>Aluno</span></a>
+                <a class="button-empresa" href="/cadastroEmpresa"><span>Empresa</span></a>
             </div>
             <figure class="descer"><a href="#how"><img src="./img/down.svg" alt="Ir para baixo"/></a>   </figure>
         </section>
@@ -57,7 +57,7 @@
                 <div class="circle">
                     <img src="/img/step1.svg" alt="Icon"/>
                 </div>
-                <p>1.<a href="/formAluno.html">Cadastre-se</a></p>    
+                <p>1.<a href="/cadastroEmpresa">Cadastre-se</a></p>    
             </div>
             <figure class="right-arrow">
                 <img src="/img/arrow_right.svg" alt="Próximo"/>
@@ -66,7 +66,7 @@
                 <div class="circle">
                     <img src="/img/step2.svg" alt="Icon"/>
                 </div>
-                <p>2.<a href="/cursos.html">Escolha</a> um curso</p>    
+                <p>2.<a href="/cursos">Escolha</a> um curso</p>    
             </div>
             <figure class="right-arrow">
                 <img src="/img/arrow_right.svg" alt="Próximo"/>
@@ -115,7 +115,7 @@
             </div>
             
         </div>
-        <a href="/cursos.html"><button class="btn-link">Ver mais</button></a>
+        <a href="/cursos"><button class="btn-link">Ver mais</button></a>
    </section>
    
    <footer class="rodape bg-space">
