Conserta icone do instagram de sobrenos

--- a/views/index.html
+++ b/views/index.html
@@ -127,7 +127,7 @@
     </div>
     <figure class="social-icons">   
         <a href="https://www.facebook.com/plataformaedup/"> <img src="./img/face.svg" alt="Social"> </a>
-        <a  href="https://instagram.com/plataformaedup" > <img src="./img/insta.svg"alt="Social"> </a>
+        <a  href="https://instagram.com/plataformaedup" > <img src="./img/instagram.svg"alt="Social"> </a>
         <!--<img src="./img/in.svg" href="" alt="Social">-->
     </figure>
     </footer>
