--- a/views/index.html
+++ b/views/index.html
@@ -126,8 +126,9 @@
         <p><span>©</span> EdUp 2020 Todos os direitos reservados.</p>
     </div>
     <figure class="social-icons">   
-        <a href="https://www.facebook.com/plataformaedup/"> <img src="./img/face.svg" alt="Social"> </a>
-        <a  href="https://instagram.com/plataformaedup" > <img src="./img/instagram.svg"alt="Social"> </a>
+        <a href="https://www.facebook.com/plataformaedup/"> <img src="./img/face.svg" alt="Facebook"> </a>
+        <a  href="https://instagram.com/plataformaedup" > <img src="./img/instagram.svg" alt="Instagram"> </a>
+        <a href="https://github.com/lisahtoledo/newedup"> <img src="./img/github.svg" alt="Github"> </a>
         <!--<img src="./img/in.svg" href="" alt="Social">-->
     </figure>
     </footer>
