--- a/views/sobrenos.html
+++ b/views/sobrenos.html
@@ -32,7 +32,7 @@
                          <a href="https://www.facebook.com/annddre.luiz"><img src="./img/facebook .svg" alt="" width="20x20"></a>
                          <a href="https://www.instagram.com/andre.bluiz/"><img src="./img/insta.svg" alt="" width="20x20"></a>
                          <a href="https://www.linkedin.com/in/andr%C3%A9-luiz-da-silva-barboza-57a265192/"><img src="./img/linkedin.svg" alt="" width="20x20"></a>
-                         <a href="https://github.com/andrebluiz94"><img src="./img/github.svg" alt="" width="25x25"></a>
+                         <a href="https://github.com/andrebluiz94"><img src="./img/git.svg" alt="" width="25x25"></a>
                     </div> 
                 </article>
               </div>
@@ -45,7 +45,7 @@
                         <a href="https://www.facebook.com/alex.silva.3705"><img src="./img/facebook .svg" alt="" width="20x20"></a>
                         <a href="https://www.instagram.com/alex.gaia98/"><img src="./img/insta.svg" alt="" width="20x20"></a>
                         <a href="https://www.linkedin.com/in/alexsandrogaia/"><img src="./img/linkedin.svg" alt="" width="20x20"></a>
-                        <a href="https://github.com/alexgaia98"><img src="./img/github.svg" alt="" width="25x25"></a>
+                        <a href="https://github.com/alexgaia98"><img src="./img/git.svg" alt="" width="25x25"></a>
                    </div>
                 </article>
               </div>
@@ -58,7 +58,7 @@
                         <a href="https://www.facebook.com/beatriz.araujo.39142072/"><img src="./img/facebook .svg" alt="" width="20x20"></a>
                         <a href="https://www.instagram.com/biamix/"><img src="./img/insta.svg" alt="" width="20x20"></a>
                         <a href="https://www.linkedin.com/in/beatriz-araujo-9a68a5195/"><img src="./img/linkedin.svg" alt="" width="20x20"></a>
-                        <a href="https://github.com/biamix97"><img src="./img/github.svg" alt="" width="25x25"></a>
+                        <a href="https://github.com/biamix97"><img src="./img/git.svg" alt="" width="25x25"></a>
                    </div>
                 </article>
               </div>
@@ -74,7 +74,7 @@
                                 <a href="https://www.facebook.com/cleiseane.gdasilva"><img src="./img/facebook .svg" alt="" width="20x20"></a>
                                 <a href="https://www.instagram.com/zi.ani/"><img src="./img/insta.svg" alt="" width="20x20"></a>
                                 <a href="https://www.linkedin.com/in/cleiseane-gibin-675b38164/"><img src="./img/linkedin.svg" alt="" width="20x20"></a>
-                                <a href="https://github.com/zipontoani"><img src="./img/github.svg" alt="" width="25x25"></a>
+                                <a href="https://github.com/zipontoani"><img src="./img/git.svg" alt="" width="25x25"></a>
                            </div>
                     </article>
                 </div>
@@ -87,7 +87,7 @@
                             <a href="https://www.facebook.com/lisahtoledo/"><img src="./img/facebook .svg" alt="" width="20x20"></a>
                             <a href="https://www.instagram.com/lisahtoledo/"><img src="./img/insta.svg" alt="" width="20x20"></a>
                             <a href="https://www.linkedin.com/in/elisatoledo/"><img src="./img/linkedin.svg" alt="" width="20x20"></a>
-                            <a href="https://github.com/lisahtoledo"><img src="./img/github.svg" alt="" width="25x25"></a>
+                            <a href="https://github.com/lisahtoledo"><img src="./img/git.svg" alt="" width="25x25"></a>
                         </div>
                     </article>
                 </div>
@@ -100,7 +100,7 @@
                             <a href="https://www.facebook.com/guilherme.lino.50"><img src="./img/facebook .svg" alt="" width="20x20"></a>
                             <a href="https://www.instagram.com/visao_lino/"><img src="./img/insta.svg" alt="" width="20x20"></a>
                             <a href="https://www.linkedin.com/in/guilhermelino/"><img src="./img/linkedin.svg" alt="" width="20x20"></a>
-                            <a href="https://github.com/DjangoLino12"><img src="./img/github.svg" alt="" width="25x25"></a>
+                            <a href="https://github.com/DjangoLino12"><img src="./img/git.svg" alt="" width="25x25"></a>
                        </div>
                     </article>
                 </div>
