Menu responsivo na Home

--- a/views/index.html
+++ b/views/index.html
@@ -21,14 +21,24 @@
             <input type="search" placeholder="Buscar" name="pesquisar"/>
             <button></button>
         </form>    
-        <nav class="menu">
+       <div class="navbar">
             
-            
+            <label for="toggle">&#9776</label>
+            <input type="checkbox" id="toggle"/>
+            <nav class="menu">
+                <a href="#">Home</a>
+                <a href="#">Cursos</a>
+                <a href="#">Sobre</a>
+            </nav>
+         </div>
+    
+        <!--
+        <nav class="menu">            
             <a href="/">Home</a>
             <a href="/cursos">Cursos</a>
             <a href="/sobrenos">Sobre</a>
         </nav>
-
+-->
         <section class="acesso">
             <a href="/login" class="signin">Login</a>
             <button class="signup">Cadastre-se</button>
