--- a/public/css/menu_template.css
+++ b/public/css/menu_template.css
@@ -10,6 +10,87 @@ header {
     
 }
 
+.navbar {
+    //text-align: right;
+    height: 70px;
+    //line-height: 70px;
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 2;
+    
+}
+
+.menu {
+    margin: 0 30px 0 0;
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 2;
+    
+}
+
+.menu a {
+    clear: left;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 0 10px;
+    line-height: 70px;
+}
+
+span {
+    color: #54D17A;
+}
+
+label {
+    margin: 0 40px 0 0;
+    font-size: 32px;
+    line-height: 70px;
+    width: 32px;
+    display: none;
+   float: left;
+    color: #FCDE32;
+}
+
+#toggle {
+    display: none ;
+  
+}
+
+
+@media only screen and (max-width: 700px) {
+    label {
+        display: block;
+        cursor: pointer;
+    }
+  
+    .menu {
+        text-align: center;
+        width: 100%;
+        display: none;
+        position: absolute;
+        top: 20vh;
+        left: 0;
+        background-color:#202F36;
+    }
+  
+    .menu a {
+        display: block;
+        border-bottom: 1px solid #EAEAEB;
+        margin: 0;
+     
+    }
+  
+    #toggle:checked + .menu {
+        display: block;
+
+    }
+    
+    .navbar {
+        justify-content: start;
+    }
+}
+
 .logo {
    // margin-left: 30px;
    // margin-right: 30px;
@@ -71,7 +152,7 @@ header {
     color: #202F36;
     display: none;
 }
-
+/*
 .menu {
     display: flex;
     justify-content: space-around;
@@ -84,7 +165,7 @@ header {
     font-weight: bold;
     font-size: 1rem;
 }
-
+*/
 /*Mobile*/
 @media (max-width: 768px){ 
     .signup {
@@ -99,6 +180,11 @@ header {
         background-color: #FCDE32;
         font-weight: bold;
         color: #202F36;
+    }
+
+    .search {
+        display: none;
+
     }
 
 
